[package]
name = "cloudflare-update"
version = "0.1.0"
authors = ["clavierpaul <53355311+clavierpaul@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
termion = "*"